# laser_slicer

./: .coverage  .dockerignore  .gitignore  Agents.md  CHANGELOG.md  Caddyfile  Caddyfile_example  DEPLOY.md  LICENCE  README.md  borsic@192.168.178.20  caddyfile  check_candidates.py  db.sqlite3  dev_startup.md  docker-compose.prod.yml  docker-compose.yml  dump.rdb  env.example  find_collection.py  inspect_diagnostics.py  inspect_item.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  test.yml  wait-for-db.sh
caddy/: Dockerfile
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: .dockerignore  Dockerfile  Dockerfile.prod  apps.py  models.py  tasks.py  urls.py  views.py
core/management/commands/: cleanupmedia.py  diagnose_shoreline.py
core/migrations/: 0001_initial.py  0002_alter_contourjob_result_file_and_more.py
core/services/: bathymetry_service.py  contour_generator.py  elevation_service.py  osm_service.py  osm_water_service.py  svg_zip_generator.py
core/templates/core/: index.html
core/utils/: contour_ops.py  dem.py  diagnostics.py  download_clip_elevation_tiles.py  export_filename.py  geocoding.py  geometry_ops.py  osm_features.py  osm_tiles.py  parallel_ops.py  slicer.py  svg_export.py  swiss_topo_api.py  waterbody.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: ContourPreview.tsx  InfoSidebar.tsx  ManualModal.css  (+4 more)
tests/: baseline_contours.json  compare_contour_impls.py  debug_bathy_layers.py  debug_etopo.py  django_settings_stub.py  fetch_bathy_test.py  fetch_emodnet_test.py  fetch_globathy_test.py  fetch_hydrolakes_test.py  fetch_noaa_greatlakes_test.py  fetch_swissbathy_test.py  quantify_blockiness.py  reproduce_bathy_scenarios.py  test_alti3d.py  test_bathymetry_service.py  test_dem_stats.py  test_diagnostics.py  test_download_tiles.py  test_geocoding.py  test_geocoding_utils.py  test_new_features.py  test_no_bathy.py  test_osm_caching.py  test_osm_features.py  test_osm_water_service.py  test_performance.py  test_services.py  test_slicer.py  test_slicer_misc.py  test_slicer_performance.py  test_vector_masking.py  test_water_mask.py  test_water_mask_logic.py  test_waterbody.py  test_waterbody_utils.py
(+5 files in other folders)
