[project]
name = "laser-slicer"
version = "0.1.0"
description = "Download geodata and slice contour maps for laser cutting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.0",
    "filelock>=3.18.0",
    "gdal==3.6.2",
    "geojson>=3.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pyproj>=3.7.1",
    "python-dotenv>=1.1.0",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "shapely>=2.1.0",
    "svgwrite>=1.4.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
]


